apps/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsis-app
spec:
  tls:
    - hosts:
        - app-dev.example.com
      secretName: bsis-app-dev-tls
  rules:
    - host: app-dev.example.com
